--- a/build.gradle
+++ b/build.gradle
@@ -28,7 +28,10 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
     testCompile('org.springframework.boot:spring-boot-starter-test')
     compile("org.springframework.boot:spring-boot-starter-data-jpa")
+    compile 'org.springframework:spring-context-support:4.1.5.RELEASE'
 	compile("com.h2database:h2")
+	compile("net.sf.ehcache:ehcache")
+	compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.0'
     
     
 }
